@@ -49,13 +49,14 @@ still one of the guest OSes that works best.
 		<li>OpenBSD/sgi has been moved from "unsupported" to
 		supported.
 	</ul>
-	
+	<!--
 	<p>
 	<li><b>ARM Thumb:</b>
 	<ul>
 		<li>Some initial THUMB disassembly support.
 		<li>Slow (non-dyntrans) interpretation of THUMB code.
 	</ul>
+	-->
 </ul>
 
 <!--
